# ViajeFacil

./: .gitignore  .travis.yml  CMakeLists.txt  Header.h  Main.cpp  Negos.cpp  Oficinas.cpp  Peticiones.cpp  README.md  ViajeFacil.pro  ViajeFacil.sln  ViajeFacil.vcxproj  ViajeFacil.vcxproj.filters  doc.html  fecha.cpp  fecha.h  header.h  index.html  mainwindow.ui  negos 1.cpp  negos.h  negos1.cpp  oficina.cpp  params.json  peticion.h  test.xml
config/build-ViajeFacil-Clone_of_Desktop_Qt_5_4_1_MinGW_32bit-Debug/: object_script.ViajeFacil.Debug  object_script.ViajeFacil.Release
config/build-ViajeFacil-Desktop_Qt_5_4_0_MinGW_32bit-Debug/: object_script.ViajeFacil.Debug  object_script.ViajeFacil.Release  testHistorial.txt
config/build-ViajeFacil-Desktop_Qt_5_4_1_MSVC2013_64bit-Debug/: testHistorial.txt
config/build-ViajeFacil-Desktop_Qt_5_4_1_MinGW_32bit-Debug/: object_script.ViajeFacil.Debug  object_script.ViajeFacil.Release  testHistorial.txt
config/build-ViajeFacil-Qt_5_4_1_lib-Debug/: ViajeFacil  testHistorial.txt
config/cmake/: CMakeLists.txt
config/qt/: ViajeFacil  ViajeFacil.pro  diagowner.cpp  diagowner.h  diagowner.ui  dialognego.cpp  dialognego.h  dialognego.ui  dialogpeticiones.h  dialogpeticiones.ui  moc_predefs.h  testHistorial.txt
config/vs/: ViajeFacil.sln  ViajeFacil.vcxproj  ViajeFacil.vcxproj.filters
data/: data.json  data2.json  logPeticiones.txt  usuarios.txt
docs/: example.md
docs/html/: example.html
source/: ViajeFacil.pro  bcrypt.cpp  bcrypt.h  diagowner.cpp  diagowner.h  diagowner.hpp  diagowner.ui  dialogInforme.cpp  dialogInforme.hpp  dialogInforme.ui  dialogLogin.cpp  dialogLogin.hpp  dialogLogin.ui  dialogNego.cpp  dialogNego.hpp  dialogNego.ui  dialogOficinas.cpp  dialogOficinas.hpp  dialogOficinas.ui  dialogOwner.cpp  dialogOwner.hpp  dialogOwner.ui  dialogPeticiones.cpp  dialogPeticiones.hpp  dialogPeticiones.ui  dialognego.cpp  dialognego.h  dialognego.hpp  dialognego.ui  dialogoficina.cpp  dialogoficina.h  dialogoficina.ui  dialogpeticiones.cpp  dialogpeticiones.h  dialogpeticiones.hpp  dialogpeticiones.ui  doxygen_sqlite3.db  entradaHistorial.cpp  entradaHistorial.hpp  fecha.cpp  (+31 more)
source/html/: annotated.html  bcrypt_8h_source.html  classDialogNego-members.html  classDialogNego.html  classDialogNego__coll__graph.md5  classDialogNego__inherit__graph.map  classDialogOficina-members.html  classDialogOficina.html  classDialogOficina__coll__graph.map  classDialogOficina__inherit__graph.md5  classDialogOficinas-members.html  classFecha.html  (+123 more)
texto/: example.txt
(+74 files in other folders)
